chore: move version numbers to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,9 @@ android.useAndroidX=true
 kotlin.version=1.9.22
 agp.version=8.2.2
 compose.version=1.5.12
+moko.resources.version=0.24.0-alpha-3
+kotlinx.collections.immutable.version=0.3.6
+kotlinx.serialization.json.version=1.6.0
+kotlinx.datetime.version=0.5.0
+redux.kotlin.threadsafe.version=0.6.1
+multiplatform.expressions.evaluator.version=0.15.0
