--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,4 @@ kotlinx.serialization.json.version=1.6.0
 kotlinx.datetime.version=0.5.0
 redux.kotlin.threadsafe.version=0.6.1
 multiplatform.expressions.evaluator.version=0.15.0
+kermit.thelog.version=2.0.3
