--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ iosApp/iosApp.xcworkspace/*
 iosApp/iosApp.xcodeproj/*
 !iosApp/iosApp.xcodeproj/project.pbxproj
 shared/shared.podspec
+moko-resources-generated.js
