--- a/gradle.properties
+++ b/gradle.properties
@@ -19,13 +19,13 @@ android.targetSdk=34
 android.useAndroidX=true
 
 # Versions
-kotlin.version=1.9.22
-agp.version=8.2.2
-compose.version=1.5.12
-moko.resources.version=0.24.0-alpha-3
+agp.version=8.4.2
+compose.version=1.6.11
+kermit.thelog.version=2.0.4
+kotlin.version=1.9.24
 kotlinx.collections.immutable.version=0.3.6
-kotlinx.serialization.json.version=1.6.0
 kotlinx.datetime.version=0.5.0
+kotlinx.serialization.json.version=1.6.3
+moko.resources.version=0.24.1
 redux.kotlin.threadsafe.version=0.6.1
 multiplatform.expressions.evaluator.version=0.15.0
-kermit.thelog.version=2.0.3
