feat: add bignum library

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ android.useAndroidX=true
 # Versions
 agp.version=8.4.2
 compose.version=1.6.11
+ionspin.bignum.version=0.3.9
 kermit.thelog.version=2.0.4
 kotlin.version=1.9.24
 kotlinx.collections.immutable.version=0.3.6
